# ChangeLog for schedule

*schedule-v8.0.0:
	Martin Väth <martin at mvath.de>:
	- new commands pause, continue, test-pause, --no-pausing to avoid races
	- bump all file versions to 8.0.0
	- style changes (space after flow control commands; ChangeLog style)

*schedule-v7.6.0:
	Martin Väth <martin at mvath.de>:
	- export SCHEDULE_JOB to queued jobs
	- allow (relative) job address for -j
	- new option --command-text
	- manpage: explain side effects of remove and insert more verbosely

*schedule-v7.5.4:
	Martin Väth <martin at mvath.de>:
	- use state instead of static closures

*schedule-v7.5.3_p1:
	Martin Väth <martin at mvath.de>:
	- schedule-tmux: Treat 0 and - as false only if no symbol follows

*schedule-v7.5.3:
	Martin Väth <martin at mvath.de>:
	- fix a quoting problem which caused with pie on amd64 the error:
	  Hexadecimal number > 0xffffffff non-portable at (eval 1) line 1

*schedule-v7.5.2:
	Martin Väth <martin at mvath.de>:
	- schedule-tmux --remain: Avoid set-remain-on-exit (for >=tmux-2.4)

*schedule-v7.5.1:
	Martin Väth <martin at mvath.de>:
	- zsh completion: Fix return value (needed for >=zsh-5.3)

*schedule-v7.5.0_p1:
	Martin Väth <martin at mvath.de>:
	- systemd: Add security options of systemd-232

*schedule-v7.5.0:
	Martin Väth <martin at mvath.de>:
	- rename lib/ -> shared/schedule/ in distribution and path search
	- systemd: Cleanly stop, hoping that new timeout fixes the issues
	- openrc: Decrease suggested timeout (symmetric to systemd)
	- schedule man: Fix marking in SYNOPSIS
	- man: Output in utf-8
	- README: Explain file/server version numbering/compatibility

*schedule-v7.4.0:
	Martin Väth <martin at mvath.de>:
	- use timeout also when opening the socket (previously, e.g.
	  an iptables block could have caused a deadlock)
	- use timeout also when sending
	- use additional alarm protection when sending and receiving
	- clarify description of --timeout on manpages
	- improve negative test for SCHEDULE_REMAIN