@@ -3,7 +3,8 @@
 Framework to schedule jobs in a multiuser multitasking environment
 
 (C) Martin Väth (martin at mvath.de).
-This project is under the BSD license.
+This project is under the BSD license 2.0 (“3-clause BSD license”).
+SPDX-License-Identifier: BSD-3-Clause
 
 ## What is this project and what it is good for?
 
