@@ -1,5 +1,6 @@
 #!/usr/bin/env sh
-# Copyright Martin Väth <martin@mvath.de>.
+# Copyright Martin V\"ath <martin at mvath.de>.
+# SPDX-License-Identifier: BSD-3-Clause
 # This is part of the schedule project.
 set -u
 
