@@ -1,3 +1,5 @@
+# Copyright Martin V\"ath <martin at mvath.de>.
+# SPDX-License-Identifier: BSD-3-Clause
 [Unit]
 Description=system wide schedule-server
 
