@@ -1,4 +1,6 @@
 #compdef schedule schedule-tmux schedule-server
+# Copyright Martin V\"ath <martin at mvath.de>.
+# SPDX-License-Identifier: BSD-3-Clause
 local curcontext="$curcontext" state state_descr line expl
 typeset -A opt_args
 integer NORMARG
